--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="Column_1"> <!-- Left column -->
 			<h1>GitHub</h1>
 				<p>You can view my coding projects on my GitHub profile here:<br>
-				<center><a href="https://github.com/ashlieghdaw" target="_blank">Ashliegh's GitHub</a></center></p>
+				<center><a href="https://github.com/ashlieghdawn" target="_blank">Ashliegh's GitHub</a></center></p>
 		</div>
 		
 		<div class="Column_2"> <!-- Right column -->
